k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-node
  template:
    metadata:
      labels:
        app: dev-node
    spec:
      containers:
      - name: env
        image: mittwillson/node-dev:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "2Gi"
            cpu: "2000m"
        volumeMounts:
          - mountPath: /data/
            name: data
        ports:
          - containerPort: 3000
            name: http
          - containerPort: 22
            name: sshd
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dev-node-data
