k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-node
  labels:
    app: dev-node
spec:
  selector:
    app: dev-node
  ports:
  - port: 3000
    targetPort: http
    name: web-dev
  - port: 22
    targetPort: sshd
    name: sshd
