k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-node
  labels:
    app: dev-node
spec:
  rules:
  - host: "dev.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-node
            port:
              name: web-dev
